# statorange

./: .clang-format  .clang-tidy  .clang_complete  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README  README.md  StateItem.cpp  StateItem.hpp  config.example.json  config.h  config.hpp  config.json  die.h  die.hpp  eventHandler.cpp  eventTester  i3-ipc-constants.h  i3-ipc-constants.hpp  i3-ipc.c  i3-ipc.cpp  i3-ipc.h  i3state.c  i3state.cpp  i3state.h  i3state.hpp  index.html  jsonParser.c  jsonParser.cpp  jsonParser.h  jsonParser.hpp  jsonParser.hs  jsonSearch.c  jsonSearch.cpp  jsonSearch.h  jsonSearch.hpp  launcher.py  (+27 more)
StateItems/: Battery.cpp  Battery.hpp  CPU.cpp  CPU.hpp  Date.cpp  Date.hpp  Makefile  Net.cpp  Net.hpp  Space.cpp  Space.hpp  Volume.cpp  Volume.hpp
debug/: i3-ipc.d  i3state.d  jsonParser.d  jsonSearch.d  output.d  statorange.d  strUtil.d  systemState.d
include/: Address.hpp  Lemonbar.hpp  Logger.hpp  StateItem.hpp  json_parser.hpp  util.hpp
include/StateItems/: Battery.hpp  CPU.hpp  Date.hpp  I3.hpp  Load.hpp  Net.hpp  PulseAudio.hpp  Space.hpp  Weather.hpp
include/i3/: ipc.hpp  ipc_constants.hpp
include/utils/: convert.hpp  exception.hpp  i3_tree.hpp  io.hpp  multimap.hpp  parse.hpp  resource.hpp
oldsrc/: BarWriter.cpp  BarWriter.hpp
oldsrc/StateItems/: IMAPMail.hpp  Volume.cpp  Volume.hpp
oldsrc/i3/: I3State.cpp  I3State.hpp  I3Workspaces.cpp  I3Workspaces.hpp
other/: eventTester.c  jsonPrinter.c  numOutTest.c  selectTest.c  signalTest.c  signalTest2.c  sleep-test  sleep-test.c  utils.h
release/: i3-ipc.d  i3state.d  jsonParser.d  jsonSearch.d  output.d  statorange.d  strUtil.d  systemState.d
src/: Address.cpp  Address.hpp  Application.cpp  Application.hpp  Lemonbar.cpp  Lemonbar.hpp  Logger.cpp  Logger.hpp  StateItem.cpp  StateItem.hpp  eventHandler.cpp  event_handler.cpp  event_handler.hpp  i3-ipc-constants.hpp  i3-ipc.cpp  i3-ipc.hpp  i3state.cpp  i3state.hpp  json_parser.cpp  json_parser.hpp  output.cpp  output.hpp  statorange.cpp  util.cpp  util.hpp
src/JSON/: JSONException.hpp  jsonParser.cpp  jsonParser.hpp  jsonSearch.cpp  jsonSearch.hpp  json_parser.cpp  json_parser.hpp
src/StateItems/: Battery.cpp  Battery.hpp  CPU.cpp  CPU.hpp  Date.cpp  Date.hpp  GMail.cpp  GMail.hpp  I3.cpp  I3Workspaces.cpp  I3Workspaces.hpp  IMAPMail.cpp  IMAPMail.hpp  Load.cpp  Net.cpp  Net.hpp  PulseAudio.cpp  Space.cpp  Space.hpp  Volume.cpp  Volume.hpp  Weather.cpp
src/i3/: I3State.cpp  I3State.hpp  i3-ipc.cpp  i3-ipc.hpp  ipc.cpp
src/utils/: io.cpp  parse.cpp
tests/: i3_ipc.cpp  main.cpp  util.cpp  util_convert_to_number.cpp  util_string_pointer.cpp  utils.cpp  utils.hpp  utils_convert.cpp  utils_io.cpp  utils_parse.cpp
